update storyBoard now

--- a/AdvancedScrollView/Base.lproj/Main.storyboard
+++ b/AdvancedScrollView/Base.lproj/Main.storyboard
@@ -1,24 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AdvancedScrollView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aEl-NC-rER">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="07N-Ci-Gz1">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fol-r8-u6x">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OdP-Zs-fFw">
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="1000" id="ecJ-iV-qya"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="fol-r8-u6x" firstAttribute="leading" secondItem="07N-Ci-Gz1" secondAttribute="leading" id="ALk-Hv-mZj"/>
+                                            <constraint firstAttribute="trailing" secondItem="fol-r8-u6x" secondAttribute="trailing" id="Arn-Ua-gzd"/>
+                                            <constraint firstItem="fol-r8-u6x" firstAttribute="top" secondItem="07N-Ci-Gz1" secondAttribute="top" id="RgL-6X-J4K"/>
+                                            <constraint firstAttribute="bottom" secondItem="fol-r8-u6x" secondAttribute="bottom" id="paX-ij-hWf"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="07N-Ci-Gz1" firstAttribute="top" secondItem="aEl-NC-rER" secondAttribute="top" id="AJf-xh-TRL"/>
+                                    <constraint firstAttribute="bottom" secondItem="07N-Ci-Gz1" secondAttribute="bottom" id="R95-Sb-Afn"/>
+                                    <constraint firstItem="07N-Ci-Gz1" firstAttribute="width" secondItem="aEl-NC-rER" secondAttribute="width" id="ZXW-ML-HbD"/>
+                                    <constraint firstAttribute="trailing" secondItem="07N-Ci-Gz1" secondAttribute="trailing" id="rkG-QN-N0r"/>
+                                    <constraint firstItem="07N-Ci-Gz1" firstAttribute="leading" secondItem="aEl-NC-rER" secondAttribute="leading" id="x2U-Hw-RHa"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="GzC-AD-IC8"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="8v2-3K-5FD"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aEl-NC-rER" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ron-ZJ-tIX"/>
+                            <constraint firstItem="aEl-NC-rER" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VEF-2x-kHJ"/>
+                            <constraint firstAttribute="bottom" secondItem="aEl-NC-rER" secondAttribute="bottom" id="VRK-Mz-SOD"/>
+                            <constraint firstItem="aEl-NC-rER" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="x0j-de-B6d"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140.57971014492756" y="72.991071428571431"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
